<resources>
    <string name="app_name">Evolve</string>
    <string name="lato_regular">fonts/Lato-Regular.ttf</string>
    <string name="lato_bold">fonts/Lato-Bold.ttf</string>
    <string name="lato_ligth">fonts/Lato-Light.ttf</string>
    <string name="manage_your_career_and_live_a_more_enriched_lifestyle_the_evolution_of_the_athlete_lives_here">Manage your career and live a more enriched lifestyle. The evolution of the athlete lives here!</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="create_your_account">Create your account</string>
    <string name="full_name">FULL NAME</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="request_access">Request Access</string>
    <string name="request_sent">Request Sent !</string>
    <string name="request_sent_summary">A member of our team is reviewing your details. We’ll text you when your account is ready.</string>
    <string name="choose">Choose</string>
    <string name="onboarding_content">Add your bio and team history so that you can track your career growth and connect with teammates.</string>
    <string name="step_1">STEP 1</string>
    <string name="step_1_bio_and_team_history">Step 1: Bio and Team History</string>
    <string name="enter_your_birthdate">Enter your Birthdate</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="where_are_you_from">Where are you from?</string>
    <string name="begin_typing_your_city">Begin typing your city</string>
    <string name="where_are_you_currently_located">Where are you currently located?</string>
    <string name="use_current_location">Use current location</string>
    <string name="continue_">Continue</string>
    <string name="what_team_s_have_you_most_recently_played_for">What team(s) have you most recently played for?</string>
    <string name="add_a_team">Add a team</string>
    <string name="add_a_team_">Add a Team</string>
    <string name="start_date">START DATE</string>
    <string name="end_date">END DATE</string>
    <string name="present">Present</string>
    <string name="done">Done</string>
    <string name="sorry_we_can_t_find_your_team_try_searching_by_country">Sorry, we can’t find your team Try searching by country</string>
    <string name="team_name">TEAM NAME</string>
    <string name="country">COUNTRY</string>
    <string name="add_team">Add Team</string>
    <string name="step_2_personal_interests">Step 2: Personal Interests</string>
    <string name="select_your_favorite_topic_s">SELECT YOUR FAVORITE TOPIC(S)</string>
    <string name="career">CAREER</string>
    <string name="finance">FINANCE</string>
    <string name="entrepreneurship">ENTREPRENEURSHIP</string>
    <string name="community">COMMUNITY</string>
    <string name="health_wellness"><![CDATA[HEALTH & WELLNESS]]></string>
    <string name="arts">ARTS</string>
    <string name="alternative_investments">ALTERNATIVE INVESTMENTS</string>
    <string name="other">OTHER</string>
    <string name="add_an_interest">Add an Interest</string>
    <string name="step_3_off_court_vibes">Step 3: Off-Court Vibes</string>
    <string name="explore">EXPLORE</string>
    <string name="american_spots">AMERICAN SPOTS</string>
    <string name="hangout">HANGOUT</string>
    <string name="nature">NATURE</string>
    <string name="shopping">SHOPPING</string>
    <string name="add_a_vibe">Add a vibe</string>
    <string name="send_an_invite">Send An Invite</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="log_out">Log Out</string>
    <string name="invite_a_new_user">Invite A New User</string>
    <string name="add_from_contacts">Add From Contacts</string>
    <string name="send_invite">Send Invite</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="wevolv_qr_code">Wevolv QR Code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_my_code">SHARE MY CODE</string>
    <string name="save_to_photos">SAVE TO PHOTOS</string>
    <string name="share_from_photos">SHARE FROM PHOTOS</string>
    <string name="share_with_photo">SHARE WITH PHOTO</string>
    <string name="share_code_only">SHARE CODE ONLY</string>
    <string name="cancel">CANCEL</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="request_password">Request Password</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="enter_email_address">ENTER EMAIL ADDRESS</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_request_sent">Reset Request sent!</string>
    <string name="check_your_email_for_a_link_to_reset_your_wevolv_password">Check your email for a link to reset your Wevolv password.</string>
    <string name="create_new_password">Create New Password</string>
    <string name="step_4_education_history">Step 4: Education History</string>
    <string name="school">SCHOOL</string>
    <string name="degree">DEGREE</string>
    <string name="field_of_study">FIELD OF STUDY</string>
    <string name="wevolv_will_send_personalized_career_opportunities_your_way">“Wevolv will send personalized career opportunities your way.”</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="step_4_who_is_your_agent">Step 4: Who Is Your Agent?</string>
    <string name="enter_name">ENTER NAME</string>
    <string name="_24_7_communication">24/7 Communication</string>
    <string name="how_would_you_rate_name_as_an_agent">How would you rate {Name} as an agent?</string>
    <string name="how_was_your_experience_working_with_name">How was your experience working with {Name}?</string>
    <string name="positive">Positive</string>
    <string name="neutral">Neutral</string>
    <string name="negative">Negative</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="info">Info</string>
    <string name="infoSave">SAVE</string>
    <string name="nationality">NATIONALITY</string>
    <string name="add_another_nationality">Add Another Nationality</string>
    <string-array name="playing_status">
        <item>"Active"</item>
    </string-array>
    <string-array name="current_position">
        <item>"Point Guard at Olimpiacos B.C."</item>
    </string-array>
    <string-array name="country_region">
        <item>"Greece"</item>
    </string-array>
    <string name="locations_within_this_area">LOCATIONS WITHIN THIS AREA</string>
    <string name="measurables">Measurables</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="height">HEIGHT</string>
    <string name="weight">WEIGHT</string>
    <string name="wingspan">WINGSPAN</string>
    <string-array name="loc_within_area">
        <item>"Piraeus"</item>
    </string-array>
    <string name="trusted_pro">Trusted Pro</string>
    <string name="see_more">See More</string>
    <string name="see_all">See All</string>
    <string name="about">About</string>
    <string name="experience">Experience</string>
    <string name="accomplishments">Accomplishments</string>
    <string name="following">Following</string>
    <string name="athletes">Athletes</string>
    <string name="pro_experience">PRO EXPERIENCE</string>
    <string name="collegiate_experience">COLLEGIATE EXPERIENCE</string>
    <string name="tiktok">TikTok</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="email_cap_first">Email</string>
    <string name="highlights">Highlights</string>
    <string name="use_this_as_your_digital_resume_to_share_with_other_players_and_coaches_take_control_over_how_you_are_marketed">Use this as your digital resume to share with other players and coaches. Take control over how you are marketed</string>
    <string name="birth_year">Birth Year</string>
    <string name="heightArena">Height</string>
    <string name="weightArena">Weight</string>
    <string name="playing_style">Playing Style</string>
    <string name="skills_amp_endorsements"><![CDATA[Skills & Endorsements]]></string>
    <string name="skills">Skills</string>
    <string name="endorsements">Endorsements</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="add_item">Add Item</string>
    <string name="paste_from_clipboard">Paste from clipboard</string>
    <string name="management_team">Management Team</string>
    <string name="this_is_where_you_streamline_all_aspects_of_your_career_relationships_and_lifestyle_management_agents_consultants_service_providers_etc">This is where you streamline all aspects of your career, relationships, and lifestyle management (Agents, Consultants, Service providers, etc..)</string>
    <string name="coming_soon">Coming Soon…</string>
    <string name="see_more_resources">See More Resources</string>
    <string name="team_info">Team Info.</string>
    <string name="team_info_teammates_schedule">Team info, Teammates, Schedule…</string>
    <string name="schedule">Schedule</string>
    <string name="daily_calendar">Daily calendar</string>
    <string name="agents_managers_trainers_advisors">Agents, Managers, Trainers, Advisors</string>
    <string name="wevibe">WeVibe</string>
    <string name="off_day_experiences_recommended">Off-day experiences recommended…</string>
    <string name="resources">Resources</string>
    <string name="important_info_to_help_you_on_your">Important info to help you on your….</string>
    <string name="contracts">Contracts</string>
    <string name="manage_reviews_revisions">Manage, Reviews, Revisions</string>
    <string name="files">Files</string>
    <string name="connect">Connect</string>
    <string name="reviews">(<u>53 Reviews</u>)</string>
    <string name="sport">Sport</string>
    <string name="agency">Agency</string>
    <string name="Reviews">Reviews</string>
    <string name="leave_a_review">Leave A Review</string>
    <string name="report_agent">Report Agent</string>
    <string name="follow">Follow</string>
    <string name="founded">Founded:</string>
    <string name="color">Color:</string>
    <string name="arena">Arena:</string>
    <string name="submit_for_review_pop_up">Submit for review</string>
    <string name="one_of_our_trusted_lawyers_will_review_your_contract_to_ensure_you_are_getting_the_best_deal_possible">One of our trusted lawyers will review your contract to ensure you are getting the best deal possible.</string>
    <string name="our_reviews_typically_take_24hrs_from_the_time_it_is_received_we_will_update_the_status_in_your_contracts_folder">Our reviews typically take 24hrs from the time it is received. We will update the status in your contracts folder.</string>
    <string name="i_agree_to_wevolv_s_contract_review_terms">I agree to Wevolv’s Contract Review terms</string>
    <string name="submit">Submit</string>
</resources>