<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_setup_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="122dp"
        tools:context=".ProfileSetup">

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="12.36dp"
            android:layout_marginEnd="37dp"
            android:backgroundTint="@color/app_background"
            android:fontFamily="@font/lato"
            android:hint="@string/begin_typing_your_city"
            android:paddingBottom="18dp"
            android:textColor="@color/app_background"
            android:textColorHighlight="@color/text_color"
            android:textColorHint="@color/app_background"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_where_from" />

        <EditText
            android:id="@+id/et_current_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="12.36dp"
            android:layout_marginEnd="37dp"
            android:backgroundTint="@color/app_background"
            android:fontFamily="@font/lato"
            android:hint="@string/begin_typing_your_city"
            android:paddingBottom="18dp"
            android:textColor="@color/app_background"
            android:textColorHighlight="@color/text_color"
            android:textColorHint="@color/app_background"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_currenty_located" />

        <TextView
            android:id="@+id/tv_user_current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.53dp"
            android:layout_marginEnd="37dp"
            android:fontFamily="@font/lato"
            android:text="@string/use_current_location"
            android:textColor="@color/app_background"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_current_address" />

        <TextView
            android:id="@+id/txt_where_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/lato"
            android:text="@string/where_are_you_from"
            android:textAllCaps="true"
            android:textColor="@color/app_background"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_birthday" />

        <TextView
            android:id="@+id/txt_step_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="89dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/step_1_bio_and_team_history"
            android:textColor="@color/app_background"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txt_currenty_located"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/lato"
            android:text="@string/where_are_you_currently_located"
            android:textAllCaps="true"
            android:textColor="@color/app_background"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_address" />

        <TextView
            android:id="@+id/txt_birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="81.8dp"
            android:fontFamily="@font/lato"
            android:text="@string/enter_your_birthdate"
            android:textAllCaps="true"
            android:textColor="@color/app_background"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_step_1" />

        <TextView
            android:id="@+id/tv_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="188dp"
            android:fontFamily="@font/lato"
            android:text="@string/continue_"
            android:textColor="@color/app_background"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_current_location"
            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="17.5dp"
            android:layout_marginEnd="37dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_birthdate">

            <EditText
                android:id="@+id/et_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/app_background"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:ellipsize="end"
                android:fontFamily="@font/lato"
                android:hint="@string/month"
                android:maxEms="2"
                android:maxLines="1"
                android:paddingBottom="18dp"
                android:singleLine="true"
                android:textColor="@color/app_background"
                android:textColorHighlight="@color/text_color"
                android:textColorHint="@color/app_background"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/et_day"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="45.79dp"
                android:backgroundTint="@color/app_background"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:fontFamily="@font/lato"
                android:hint="@string/day"
                android:paddingBottom="18dp"
                android:textColor="@color/app_background"
                android:textColorHighlight="@color/text_color"
                android:textColorHint="@color/app_background"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/et_year"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/et_month"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/et_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="45.79dp"
                android:backgroundTint="@color/app_background"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:fontFamily="@font/lato"
                android:hint="@string/year"
                android:paddingBottom="18dp"
                android:textColor="@color/app_background"
                android:textColorHighlight="@color/text_color"
                android:textColorHint="@color/app_background"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/et_day"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>